Quorum/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjIntegerRetboolean.quorum
class Main
    action Main
        integer one = 66
        Integer two
        two:SetValue(66)
        Yoda<integer, Integer, boolean> yoda
        check
            boolean ret = yoda:useForce(one, two)
        detect e
            output "passed"
        end
     end
end
