Quorum/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjPriIntegerRetNumObjFail.quorum
class Main
    action Main
        Integer one
        one:SetValue(66)
        integer two = 66
        Yoda<Integer, integer, Number> yoda
        boolean wrongRet = yoda(one, two)
     end
end
